# oxn

./: .gitignore  Dockerfile  Evaluation.ipynb  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
experiments/: recommendation_delay90_A.yml  recommendation_delay90_B.yml  recommendation_delay90_C.yml  recommendation_delay90_baseline.yml  recommendation_loss15_A.yml  recommendation_loss15_B.yml  recommendation_loss15_C.yml  recommendation_loss15_baseline.yml  recommendation_pause_baseline.yml
opentelemetry-demo/: docker-compose.yml
opentelemetry-demo/src/grafana/provisioning/dashboards/demo/: demo-dashboard.json
opentelemetry-demo/src/otelcollector/: otelcol-config.yml
opentelemetry-demo/src/prometheus/: prometheus-config.yaml
opentelemetry-demo/src/recommendationservice/: Dockerfile
oxn/: __init__.py  argparser.py  context.py  engine.py  errors.py  jaeger.py  loadgen.py  log.py  main.py  observer.py  orchestration.py  pricing.py  prometheus.py  report.py  responses.py  runner.py  settings.py  store.py  treatments.py  utils.py  validation.py
oxn/models/: response.py  treatment.py
oxn/tests/integration/: test_pricing_integration.py  test_validation.py
oxn/tests/unit/: docker_mocks.py  spec_mocks.py  test_command_line.py  test_experiment_specification.py  test_jaeger.py  test_loadgen.py  test_observer.py  test_orchestration.py  test_prometheus.py  test_store.py  test_treatments.py  test_utils.py
