[metadata]
name = oxn
version = 0.0.1
license_files = LICENSE
author = Joshua Bauer
description = Observability experiments engine
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: Software Development :: Fault Injection :: Observability :: Microservices :: Distributed Systems
    License :: MIT License
    Operating System: :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
packages = find_namespace:
zip_safe = false
python_requires = >= 3.10
install_requires =
    docker>=6.0.1
    matplotlib>=3.6.2
    numpy>=1.23.5
    pandas>=1.5.2
    python-dateutil>=2.8.2
    PyYAML>=6.0
    requests>=2.28.1
    schema>=0.7.5
    gevent>=22.10.2
    locust>=2.14.2
    psutil>=5.9.4
    pytz>=2022.7.1
    python-on-whales>=0.59.0
    scipy>=1.10.1
    tables>=3.8.0

[options.packages.find]
include = oxn*
exclude =
    examples
    reports
    tests
    configs

[options.entry_points]
console_scripts =
    oxn = oxn.main:main

[mypy]
ignore_missing_imports = True
